Inicio criação menu

--- a/pg/menu.html
+++ b/pg/menu.html
@@ -1,3 +1,11 @@
+<div class="menu">
+    <div class="item-menu"><a href="#">Home</a></div>
+    <div class="item-menu"><a href="#sobre">Sobre</a></div>
+    <div class="item-menu"><a href="#projetos">Projetos</a></div>
+    <div class="item-menu"><a href="#tecnologia">Tecnologias</a></div>
+    <div class="item-menu"><a href="#sistemas">Sistemas</a></div>
+</div>
 <div class="central">
 
     <div class="div-viewport">
+        
