--- a/pg/projetos.html
+++ b/pg/projetos.html
@@ -1,4 +1,4 @@
-<div class="div-viewport-projetos">
+<div id="projetos" class="div-viewport-projetos">
     <h2 class="titulo-identificador">Projetos</h2>
 </div>
 <!--SISTEMA 1-->
