--- a/pg/sobre.html
+++ b/pg/sobre.html
@@ -1,4 +1,4 @@
-<div class="sobre">
+<div id="sobre" class="sobre">
     <h2 class="titulo-identificador">Sobre</h2>
     <p class="txt1">
         Busco oportunidades de estágio ou desenvolvedor júnior. Apesar da falta de experiência
