--- a/pg/tecnologias.html
+++ b/pg/tecnologias.html
@@ -1,5 +1,5 @@
  <!--Tecnologias-->
- <div class="div-viewport-tecnologia">
+ <div id="tecnologia" class="div-viewport-tecnologia">
     <h2 class="titulo-identificador">Tecnologias</h2>
     <p class="txt-br-center">Esse setor trata de algumas tecnologias que conheço:</p>
 </div>
