Menu responsivo, estudo da função de hide

--- a/pg/menu.html
+++ b/pg/menu.html
@@ -1,11 +1,28 @@
 <div class="menu">
-    <div class="item-menu"><a href="#">Home</a></div>
-    <div class="item-menu"><a href="#sobre">Sobre</a></div>
-    <div class="item-menu"><a href="#projetos">Projetos</a></div>
-    <div class="item-menu"><a href="#tecnologia">Tecnologias</a></div>
-    <div class="item-menu"><a href="#sistemas">Sistemas</a></div>
+    <div class="menu-resp"><span class="material-symbols-outlined"  onclick="ocultaMenu()">
+        menu
+    </span></div>
+    
+    <div id="menuCelular" class="menu-centro">
+        <div class="item-menu"><a href="#">Home</a>
+            <hr class="hr-menu">
+        </div>
+        <div class="item-menu"><a href="#sobre">Sobre</a>
+            <hr class="hr-menu">
+        </div>
+        <div class="item-menu"><a href="#projetos">Projetos</a>
+            <hr class="hr-menu">
+        </div>
+        <div class="item-menu"><a href="#tecnologia">Tecnologias</a>
+            <hr class="hr-menu">
+        </div>
+        <div class="item-menu"><a href="#sistemas">Sistemas</a>
+            <hr class="hr-menu">
+        </div>
+    </div>
+  
+
 </div>
 <div class="central">
 
     <div class="div-viewport">
-        
