--- a/pg/header.html
+++ b/pg/header.html
@@ -2,11 +2,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Antonystar</title>
 <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+<script type="text/javascript" src="js/func.js"></script>
 <link rel="stylesheet" type="text/css" href="css/menu.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/style-global.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/style-desktop.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/style-tablet.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/style-smartphone.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/rodape.css" media="screen" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-<script type="text/javascript" src="js/func.js"></script>
