Criação do design Desktop

--- a/corrigir.html
+++ b/corrigir.html
@@ -27,7 +27,7 @@
     <div class="corrigir">
         <h1>LEVANTAMENTO DE CORREÇÕES parte I</h1>
         <ol>
-            <li class="#">
+            <li class="concluido">
                 MENU
                 <ol>
                     <li class="#">Criar Desktop</li>
@@ -53,7 +53,7 @@
                 PG-PROJETOS
                 <ol>
                     <li class="#">invasão da grid pg-sobre</li>
-                    <li class="#">Criar layout de fundo branco(dividido)</li>
+                    <li class="concluido">Criar layout de fundo branco(dividido)</li>
                     <li class="#">colocar stilo hover para aparecer o nome quando passar o mouse na img</li>
                 </ol>
             </li>
@@ -61,7 +61,7 @@
                 PG-SISTEMAS
                 <ol>
                     <li class="#">invasão da grid pg-sobre</li>
-                    <li class="#">Criar layout de fundo branco(unindo com o pg-projetos)</li>
+                    <li class="concluido">Criar layout de fundo branco(unindo com o pg-projetos)</li>
                     <li class="#">colocar a div de situação do projeto</li>
                     <li class="#">colocar stilo hover para aparecer o nome quando passar o mouse na img</li>
                     <li class="#">Corrigir o posicionamento dos botoes
