--- a/pg/sistemas.html
+++ b/pg/sistemas.html
@@ -1,8 +1,9 @@
   <!--Pequenos sistemas-->
   <div id="sistemas" class="div-viewport-sistema">
     <h2 class="titulo-identificador">Sistemas</h2>
-    <p class="txt-br-center">Esse setor trata de alguns sistemas desenvolvidos que achei interessante expor
+    <p class="txt-az-center">Esse setor trata de alguns sistemas desenvolvidos que achei interessante expor
         no portifólio</p>
+       
 </div>
 
 
